--- a/pages/space_page.html
+++ b/pages/space_page.html
@@ -11,16 +11,16 @@
       <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Full Sunlight and Mirrors</p2></div>
     </div>
   </div>
-  <p2> Cre8ive Space 1-1, an approximately 500 sq foot loft with 12+ foot ceilings and oversized windows that let in lots of natural light. Space 1-1 can host up to 40 people and will be the perfect location for all your off-site activities! </p2> <br>
+  <p2> Space 1-1 is a versatile 500 sq ft space, ideal for productive corporate events. Customize the layout to suit your specific needs, enjoy ample natural light, and benefit from a mirrored wall. This adaptable space is perfect for memorable meetings and workshops. </p2> <br>
   <a href="/space-1-1">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
 
 <div class="slideshow-container">
-  <div class="mySlides1"><img src="https://staticcontent.skedda.com/spaceimages/168328_0a7dcf08ed134befaea7a1211d168ba6.png" style="width:100%"></div>
-  <div class="mySlides1"><img src="https://staticcontent.skedda.com/spaceimages/168328_0786fccf188e489984e24dfaf112d835.png" style="width:100%"></div>
-  <div class="mySlides1"><img src="https://staticcontent.skedda.com/spaceimages/168328_b13614a5cf1f4d2fa503ed6fb3715076.png" style="width:100%"></div>
+  <div class="mySlides1"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/8f764dd6-160c-4779-9c55-7c8444a47f26/Space+1-1+(1)-+cover.jpg" style="width:100%"></div>
+  <div class="mySlides1"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/6862f3a9-1b21-4b17-8b5b-86501ac8ef27/Space+1-1+%282%29-+meeting.JPG" style="width:100%"></div>
+  <div class="mySlides1"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/bddf391d-6bf0-4c38-add0-83b37f7fffe1/Space+1-1+%283%29-+production.jpg" style="width:100%"></div>
 </div>
   <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
@@ -34,11 +34,11 @@
   <div class="row_wrapper">
     <div class="icon_row">
       <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>25-30 Guests</p2></div>
-      <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecf99d9f230bcceefcae/1721232633771/icon-stage.png" align="middle"><p2>Stage with Lights</p2></div>
+      <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecf99d9f230bcceefcae/1721232633771/icon-stage.png" align="middle"><p2>Low Stage</p2></div>
       <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Street-View Windows</p2></div>
     </div>
   </div>
-  <p2> Cre8ive Space 1-2, an approximately 500 sq foot loft, is our theater space! The space boasts a low stage, outward-facing windows, versatile stage lighting and seating that matches the grand atmosphere of the room. </p2> <br>
+  <p2> Space 1-2 is a versatile space featuring a low stage, perfect for presentations and performances. Enjoy natural light from oversized windows and benefit from adaptable lighting to create a dynamic atmosphere. The comfortable seating and sound-dampening materials ensure a memorable experience for your attendees. </p2> <br>
   <a href="/space-1-2">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
@@ -46,9 +46,9 @@
 
 
 <div class="slideshow-container">
-  <div class="mySlides2"><img src="https://staticcontent.skedda.com/spaceimages/168328_770ad2ce5dc14deb84bde7adb4519813.png" style="width:100%"></div>
-  <div class="mySlides2"><img src="https://staticcontent.skedda.com/spaceimages/168328_ee6cc4ebea7f4202991a6e1c1135b358.png" style="width:100%"></div>
-  <div class="mySlides2"><img src="https://staticcontent.skedda.com/spaceimages/168328_1ad2e221319643c69168dde296bc4ee4.png" style="width:100%"></div>
+  <div class="mySlides2"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/00457424-e29c-497a-9a37-a71040cf3d57/Space+1-2+%281%29-+cover.jpg" style="width:100%"></div>
+  <div class="mySlides2"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/bf2a15db-8f49-4246-8541-6f38f5bcd30f/Space+1-2+%282%29-+meeting.JPG" style="width:100%"></div>
+  <div class="mySlides2"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/64b637d7-c4fd-485f-b831-2ee317f7f613/Space+1-2+%283%29-+event.JPG" style="width:100%"></div>
 </div>
   <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
@@ -66,7 +66,7 @@
       <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Mirrors and Windows</p2></div>
     </div>
   </div>
-  <p2> Cre8ive Space 2-2, a 323 sq foot loft, boasts 12+ foot ceilings, a mirrored wall, and outward-facing, oversized windows for tons of natural light. The space accommodates up to 25 people, and has acoustic installation along with sound dampening, and versatile lighting </p2> <br>
+  <p2> Space Type 2 is a versatile 323 sq ft loft with oversized windows and a mirrored wall, perfect for a variety of activities. Accommodating up to 25 people, the space offers ample room for collaboration and productivity. With adaptable lighting, you can create the ideal atmosphere for your team. </p2> <br>
   <a href="/space-type-2">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
@@ -74,9 +74,9 @@
 
 
 <div class="slideshow-container">
-  <div class="mySlides3"><img src="https://staticcontent.skedda.com/spaceimages/168328_770ad2ce5dc14deb84bde7adb4519813.png" style="width:100%"></div>
-  <div class="mySlides3"><img src="https://staticcontent.skedda.com/spaceimages/168328_ee6cc4ebea7f4202991a6e1c1135b358.png" style="width:100%"></div>
-  <div class="mySlides3"><img src="https://staticcontent.skedda.com/spaceimages/168328_1ad2e221319643c69168dde296bc4ee4.png" style="width:100%"></div>
+  <div class="mySlides3"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/fa3eff7e-0564-4ac9-a82d-d5539f1eb23f/Studio+2-5+%282%29-+meeting.JPG" style="width:100%"></div>
+  <div class="mySlides3"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/216b5f74-2bf0-45cc-bf37-8ffa17cb8414/Studio+2-4+%287%29.JPG" style="width:100%"></div>
+  <div class="mySlides3"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/c8721ed4-dbcf-4bc7-83ea-b56b3c5eacf9/Studio+2-5+%286%29.jpg" style="width:100%"></div>
 </div>
   <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
@@ -94,7 +94,7 @@
       <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697efc32f7c257f79771a56/1721233347246/icon-low-volume.png" align="middle"><p2>Additional Sound Dampening</p2></div>
     </div>
   </div>
-  <p2> Cre8ive Space 2-1, a 344 sq foot loft, boasts 12+ foot ceilings, a mirrored wall, and outward-facing, oversized windows for tons of natural light. </p2> <br>
+  <p2> Space 2-1 is an adaptable 323 sq ft loft bathed in natural light. This space is ideal for productive collaborations, with ample room for up to 25 people. Our advanced sound-dampening technology ensures a quiet and focused environment, perfect for meetings, interviews, or recordings. </p2> <br>
   <a href="/space-2-1">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
@@ -102,9 +102,9 @@
 
 
 <div class="slideshow-container">
-  <div class="mySlides4"><img src="https://staticcontent.skedda.com/spaceimages/168328_770ad2ce5dc14deb84bde7adb4519813.png" style="width:100%"></div>
-  <div class="mySlides4"><img src="https://staticcontent.skedda.com/spaceimages/168328_ee6cc4ebea7f4202991a6e1c1135b358.png" style="width:100%"></div>
-  <div class="mySlides4"><img src="https://staticcontent.skedda.com/spaceimages/168328_1ad2e221319643c69168dde296bc4ee4.png" style="width:100%"></div>
+  <div class="mySlides4"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/22cce96e-b70b-454c-a3a9-916471b712e1/Space+2-1+%284%29-+production.jpg" style="width:100%"></div>
+  <div class="mySlides4"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/d23dde96-928f-491d-a86a-4cbe5557a833/Space+2-1+%282%29-+meeting.jpg" style="width:100%"></div>
+  <div class="mySlides4"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/c157df35-a851-433e-99f7-c841e377e80d/Space+2-1+%287%29.jpg" style="width:100%"></div>
 </div>
   <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
@@ -121,7 +121,7 @@
       <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697e7d85efc44329525adca/1721231320754/icon-wall-mirror.png" align="middle"><p2>Wall Length Mirrors</p2></div>
     </div>
   </div>
-  <p2> Cre8ive Space 3-1, with 12+ ft ceilings and a 323 sq ft floor plan, is a stunning interior loft that can be modified and customized to fit any activity! The space contains a mirrored wall, acoustic installation, and versatile lighting. </p2> <br>
+  <p2> Space Type 3 is a 323 sq ft loft, perfect for dance classes, creative projects, or small meet-ups. The mirrored wall adds a touch of elegance and can be used for various purposes. The studio's acoustic insulation ensures a quiet and focused environment, ideal for meetings, workshops, or creative projects. </p2> <br>
   <a href="/space-type-3">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
@@ -129,9 +129,9 @@
 
 
 <div class="slideshow-container">
-  <div class="mySlides5"><img src="https://staticcontent.skedda.com/spaceimages/168328_770ad2ce5dc14deb84bde7adb4519813.png" style="width:100%"></div>
-  <div class="mySlides5"><img src="https://staticcontent.skedda.com/spaceimages/168328_ee6cc4ebea7f4202991a6e1c1135b358.png" style="width:100%"></div>
-  <div class="mySlides5"><img src="https://staticcontent.skedda.com/spaceimages/168328_1ad2e221319643c69168dde296bc4ee4.png" style="width:100%"></div>
+  <div class="mySlides5"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/068c7efe-a702-49b8-be80-9079d1fee1e9/Studio+3-3+%287%29.jpg" style="width:100%"></div>
+  <div class="mySlides5"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/a116225d-1d50-42e9-8f50-49aea1111654/Space+3-2+%284%29.jpg" style="width:100%"></div>
+  <div class="mySlides5"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/265556ce-ac31-4155-93ff-9f92359a93ca/Space+3-2+%282%29-+meeting.jpeg?" style="width:100%"></div>
 </div>
   <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
@@ -148,7 +148,7 @@
       <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecdadeded22f5e89bcfc/1721232602751/icon-presentation.png" align="middle"><p2>Conference Room</p2></div>
     </div>
   </div>
-  <p2> Cre8ive Space 3-4, with 12+ ft ceilings and a 323 sq ft floor plan, is a newly remodeled permanent conference table set up, ready to be booked starting at $40 an hour. </p2> <br>
+  <p2> Space 3-4 is a dedicated conference room with a large table, whiteboard, and easy-to-connect TV screen. Ideal for productive meetings and presentations. This flexible space is perfect for brainstorming, collaborating, and sharing ideas with your team. </p2> <br>
   <a href="/space-3-4">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
@@ -156,9 +156,9 @@
 
 
 <div class="slideshow-container">
-  <div class="mySlides6"><img src="https://staticcontent.skedda.com/spaceimages/168328_770ad2ce5dc14deb84bde7adb4519813.png" style="width:100%"></div>
-  <div class="mySlides6"><img src="https://staticcontent.skedda.com/spaceimages/168328_ee6cc4ebea7f4202991a6e1c1135b358.png" style="width:100%"></div>
-  <div class="mySlides6"><img src="https://staticcontent.skedda.com/spaceimages/168328_1ad2e221319643c69168dde296bc4ee4.png" style="width:100%"></div>
+  <div class="mySlides6"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/9585f7ec-e712-45ef-8311-cb47186f2e6d/Space+3-4+%283%29.JPG" style="width:100%"></div>
+  <div class="mySlides6"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/1675d685-2c0a-4b95-9faa-617010e13ba8/Space+3-4+%285%29.JPG" style="width:100%"></div>
+  <div class="mySlides6"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/d94a923f-11ec-4bb7-a093-fc00d63c01d4/Space+3-4+%284%29-+meeting.JPG" style="width:100%"></div>
 </div>
   <a class="prev" onclick="plusSlides(-1, 5)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
@@ -175,7 +175,7 @@
       <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e7af01771ec9f3f0b6/1721234407864/icon-dance.png" align="middle"><p2>Sprung Dance Floor</p2></div>
     </div>
   </div>
-  <p2> At 600 sq ft, Space 4 is our largest available space. Starting at $69 an hour, this 40 -person capacity space contains a wall-to-wall mirror with drawable curtains, versatile lighting, </p2> <br>
+  <p2> Space 4 is our largest available space, spanning 600 sq ft, making it ideal for workshops, training sessions, or large meetings. The versatile room features a wall-to-wall mirror with retractable curtains, perfect for group activities or presentations. </p2> <br>
   <a href="/space-4">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
@@ -183,9 +183,9 @@
 
 
 <div class="slideshow-container">
-  <div class="mySlides7"><img src="https://staticcontent.skedda.com/spaceimages/168328_770ad2ce5dc14deb84bde7adb4519813.png" style="width:100%"></div>
-  <div class="mySlides7"><img src="https://staticcontent.skedda.com/spaceimages/168328_ee6cc4ebea7f4202991a6e1c1135b358.png" style="width:100%"></div>
-  <div class="mySlides7"><img src="https://staticcontent.skedda.com/spaceimages/168328_1ad2e221319643c69168dde296bc4ee4.png" style="width:100%"></div>
+  <div class="mySlides7"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/6aaf8e8e-7f97-49ef-8edf-096c5d845528/Space+4+%287%29.jpg" style="width:100%"></div>
+  <div class="mySlides7"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/b56800fb-8f7f-4aab-bad8-0d3dff5d7210/Space+4+%285%29.jpg" style="width:100%"></div>
+  <div class="mySlides7"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/66ba119d-a46b-43b3-a253-d8f11834fd25/Space+4+%281%29-+cover-production.jpg" style="width:100%"></div>
 </div>
   <a class="prev" onclick="plusSlides(-1, 6)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 6)">&#10095;</a>
