--- a/pages/space_page.html
+++ b/pages/space_page.html
@@ -11,7 +11,9 @@
       <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Full Sunlight and Mirrors</p2></div>
     </div>
   </div>
-  <p2> Space 1-1 is a versatile 500 sq ft space, ideal for productive corporate events. Customize the layout to suit your specific needs, enjoy ample natural light, and benefit from a mirrored wall. This adaptable space is perfect for memorable meetings and workshops. </p2> <br>
+  <div class="par"> 
+    <p2>Space 1-1 is a versatile 500 sq ft space, ideal for productive corporate events. Customize the layout to suit your specific needs, enjoy ample natural light, and benefit from a mirrored wall. This adaptable space is perfect for memorable meetings and workshops. </p2>
+  </div>
   <a href="/space-1-1">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
@@ -38,7 +40,9 @@
       <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Street-View Windows</p2></div>
     </div>
   </div>
-  <p2> Space 1-2 is a versatile space featuring a low stage, perfect for presentations and performances. Enjoy natural light from oversized windows and benefit from adaptable lighting to create a dynamic atmosphere. The comfortable seating and sound-dampening materials ensure a memorable experience for your attendees. </p2> <br>
+  <div class="par"> 
+    <p2>Space 1-2 is a versatile space featuring a low stage, perfect for presentations and performances. Enjoy natural light from oversized windows and benefit from adaptable lighting to create a dynamic atmosphere. The comfortable seating and sound-dampening materials ensure a memorable experience for your attendees. </p2> 
+  </div> <br>
   <a href="/space-1-2">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
@@ -66,7 +70,9 @@
       <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Mirrors and Windows</p2></div>
     </div>
   </div>
-  <p2> Space Type 2 is a versatile 323 sq ft loft with oversized windows and a mirrored wall, perfect for a variety of activities. Accommodating up to 25 people, the space offers ample room for collaboration and productivity. With adaptable lighting, you can create the ideal atmosphere for your team. </p2> <br>
+  <div class="par"> 
+    <p2>Space Type 2 is a versatile 323 sq ft loft with oversized windows and a mirrored wall, perfect for a variety of activities. Accommodating up to 25 people, the space offers ample room for collaboration and productivity. With adaptable lighting, you can create the ideal atmosphere for your team. </p2> 
+  </div> <br>
   <a href="/space-type-2">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
@@ -94,7 +100,9 @@
       <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697efc32f7c257f79771a56/1721233347246/icon-low-volume.png" align="middle"><p2>Additional Sound Dampening</p2></div>
     </div>
   </div>
-  <p2> Space 2-1 is an adaptable 323 sq ft loft bathed in natural light. This space is ideal for productive collaborations, with ample room for up to 25 people. Our advanced sound-dampening technology ensures a quiet and focused environment, perfect for meetings, interviews, or recordings. </p2> <br>
+  <div class="par"> 
+    <p2> Space 2-1 is an adaptable 323 sq ft loft bathed in natural light. This space is ideal for productive collaborations, with ample room for up to 25 people. Our advanced sound-dampening technology ensures a quiet and focused environment, perfect for meetings, interviews, or recordings. </p2> 
+  </div> <br>
   <a href="/space-2-1">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
@@ -121,7 +129,9 @@
       <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697e7d85efc44329525adca/1721231320754/icon-wall-mirror.png" align="middle"><p2>Wall Length Mirrors</p2></div>
     </div>
   </div>
-  <p2> Space Type 3 is a 323 sq ft loft, perfect for dance classes, creative projects, or small meet-ups. The mirrored wall adds a touch of elegance and can be used for various purposes. The studio's acoustic insulation ensures a quiet and focused environment, ideal for meetings, workshops, or creative projects. </p2> <br>
+  <div class="par"> 
+    <p2>Space Type 3 is a 323 sq ft loft, perfect for dance classes, creative projects, or small meet-ups. The mirrored wall adds a touch of elegance and can be used for various purposes. The studio's acoustic insulation ensures a quiet and focused environment, ideal for meetings, workshops, or creative projects. </p2> <br>
+  </div>
   <a href="/space-type-3">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
@@ -148,7 +158,9 @@
       <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecdadeded22f5e89bcfc/1721232602751/icon-presentation.png" align="middle"><p2>Conference Room</p2></div>
     </div>
   </div>
-  <p2> Space 3-4 is a dedicated conference room with a large table, whiteboard, and easy-to-connect TV screen. Ideal for productive meetings and presentations. This flexible space is perfect for brainstorming, collaborating, and sharing ideas with your team. </p2> <br>
+  <div class="par"> 
+    <p>Space 3-4 is a dedicated conference room with a large table, whiteboard, and easy-to-connect TV screen. Ideal for productive meetings and presentations. This flexible space is perfect for brainstorming, collaborating, and sharing ideas with your team. </p2> 
+  </div> <br>
   <a href="/space-3-4">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
@@ -175,7 +187,9 @@
       <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e7af01771ec9f3f0b6/1721234407864/icon-dance.png" align="middle"><p2>Sprung Dance Floor</p2></div>
     </div>
   </div>
-  <p2> Space 4 is our largest available space, spanning 600 sq ft, making it ideal for workshops, training sessions, or large meetings. The versatile room features a wall-to-wall mirror with retractable curtains, perfect for group activities or presentations. </p2> <br>
+  <div class="par"> 
+    <p>Space 4 is our largest available space, spanning 600 sq ft, making it ideal for workshops, training sessions, or large meetings. The versatile room features a wall-to-wall mirror with retractable curtains, perfect for group activities or presentations. </p2> 
+  </div> <br>
   <a href="/space-4">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
