--- a/blocks/booking_procedure.html
+++ b/blocks/booking_procedure.html
@@ -1,7 +1,7 @@
 <div class="procedures">
   <a href="/spaces">
     <div class="procedures_box">
-      <img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/bf10d501-f8a7-43c0-9247-a104033dcb4b/12+spaces.png">
+      <img src="https://static1.squarespace.com/static/6103095b9ac5253cfa74ddfd/t/67041efdff232e4422f16b9e/1728323325932/12+spaces.png">
       <h3>
         Decide which space is perfect for you!
       </h3>
@@ -13,7 +13,7 @@
 
   <a href="/amenities">
     <div class="procedures_box">
-      <img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/aa1499b7-b989-4e10-853e-a700449deede/icon-presentation.png">
+      <img src="https://static1.squarespace.com/static/6103095b9ac5253cfa74ddfd/t/67041df6a2f6fd522d5b4796/1728323062328/icon-presentation.png">
       <h3>
         Browse our Set-ups and Amenities
       </h3>
@@ -28,7 +28,7 @@
   
   <a href="/quick-book">
     <div class="procedures_box">
-      <img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/b4df9b90-333c-4215-a9dc-c7f5478f41e0/icon-schedule.png">
+      <img src="https://static1.squarespace.com/static/6103095b9ac5253cfa74ddfd/t/67041dff0dd0496d110766bf/1728323071613/icon-schedule.png">
       <h3>
         Make your booking
       </h3><br>
@@ -40,7 +40,7 @@
   
   <a href="/contact">
     <div class="procedures_box">
-      <img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/e0cd55d6-eb9f-448f-a4ee-00931c3e5394/icon-contact.png">
+      <img src="https://static1.squarespace.com/static/6103095b9ac5253cfa74ddfd/t/67041da95ef26139f4ac2508/1728322985743/icon-contact.png">
       <h3>
         Questions? Contact Us!
       </h3>
